# routes/users.js
@@ -3,12 +3,12 @@ const { fetchUsers, create, addToShelf, fetchFromShelf, fetchUserById, updateUse
 const router = express.Router();
 const { currentUser } = require('../utils');
 
-router.post('/', create);
+// router.post('/', create);
+router.get('/', currentUser, fetchUserById);
 router.post('/shelf', currentUser, addToShelf);
 router.delete('/shelf/:id', currentUser, removeFromShelf);
 router.get('/shelf', currentUser, fetchFromShelf);
-router.get('/', currentUser, fetchUsers);
-router.get('/:id', fetchUserById);
+// router.get('/', currentUser, fetchUsers);
 router.patch('/:id', currentUser, updateUser);
 router.delete('/:id', currentUser, deleteUser);
 
